--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -2,12 +2,19 @@
 
 @charset "UTF-8";
 
+/* Import Settings */
+@import
+    'settings/_functions',
+    'settings/_settings',
+    'settings/_ext_mixins';
 
+/* Import Extensions */
+@import
+    'extensions/_ext_button_transparent';
+    
 /* Import Modules */
 @import
     'modules/_reset',
-    'modules/_functions',
-    'modules/_settings',
     'modules/_grid',
     'modules/_layout',
     'modules/_layers',
@@ -18,6 +25,3 @@
     'modules/_state',
     'modules/_alerts';
 
-/* Import Extensions */
-@import
-    'extensions/_codrops_progress';
