--- a/scss/modules/_grid.scss
+++ b/scss/modules/_grid.scss
@@ -5,7 +5,7 @@
     padding: $x;
 }
 %grid {
-    @extend %content;
+    &.content { @extend %content; }
     @include box-sizing(border-box);
     @include clearfix;
     position: relative;
