--- a/scss/modules/_form.scss
+++ b/scss/modules/_form.scss
@@ -35,9 +35,14 @@ input[type=password] {
 }
 
 // Labels
-label {
-    &.affix, &.prefix, &.postfix {    
+label, .label {
+    display: $label-display;
+    margin-bottom: $label-margin-bottom;
+    @include typeScale($label-type-scale);
+
+    &.affix, &.prefix, &.postfix {
         @include typeScale($label-affix-type-scale);
+        display: inline;
         padding: $label-affix-padding-vertical $label-affix-padding-horizontal;
         background: $label-affix-bgcolor;
         border: $label-affix-border-width solid;
@@ -56,20 +61,20 @@ label {
     }
 }
 
-@mixin affixed {
+%affixed {
     float: left;
     &:focus { z-index: 2; }
 }
 
 .affix, input[type=text].affix {
-    @include affixed;
+    @extend %affixed;
 
     margin-left: 0;
     margin-right: 0;
 }
 
 .prefix {
-    @include affixed;
+    @extend %affixed;
     margin-right: -$form-border-width;
     z-index: 2;
 
@@ -80,7 +85,7 @@ label {
 }
 
 .postfix {
-    @include affixed;
+    @extend %affixed;
     margin-left: -$form-border-width;
 
     @if $form-use-radius {    
